crates/edm-core/tests/snapshots/render__commodity_unicode_w80.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  3 entries in 1 categories ======================================
+------------------+-------+-----+-------+-------+--------+-----+-------+------+
| Commodity        | Stock | Stk |   Buy |  Sell | Demand | Dmd |  Mean | CPRI |
+==================+=======+=====+=======+=======+========+=====+=======+======+
| SALVAGE — RECOVERED  3 items | 1 supplied | 0 in demand                      |
+------------------+-------+-----+-------+-------+--------+-----+-------+------+
| Grüne Ölproben ~ |    12 | #.. | 1,204 | 1,180 |      - | ... | 1,190 | ..RI |
| 東京ステーション記念品セット   |     - | ... |   412 |   400 |     18 | #.. |   406 | C... |
| 🚀🛰️🪐 Deep Sp~ |     - | ... | 9,001 | 8,900 |      - | ... | 8,950 | ..R. |
+------------------+-------+-----+-------+-------+--------+-----+-------+------+
   columns hidden to fit 80 cols: ID, Fence
