crates/edm-core/tests/snapshots/render__commodity_wide_w100.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  4 entries in 2 categories ==========================================================
+--------------+------------+-----+------------+------------+------------+-----+------------+------+
| Commodity    |      Stock | Stk |        Buy |       Sell |     Demand | Dmd |       Mean | CPRI |
+==============+============+=====+============+============+============+=====+============+======+
| CONSUMER ITEMS  2 items | 1 supplied | 2 in demand                                               |
+--------------+------------+-----+------------+------------+------------+-----+------------+------+
| Advanced Ca~ | 12,345,678 | ### | 12,345,678 | 12,345,600 | 98,765,432 | ..# | 11,900,000 | CP.I |
| Hydrogen Fu~ |          - | ... |        110 |        104 |      3,412 | #.. |        107 | .P.. |
+--------------+------------+-----+------------+------------+------------+-----+------------+------+
| LEGAL DRUGS  2 items | 2 supplied | 0 in demand                                                  |
+--------------+------------+-----+------------+------------+------------+-----+------------+------+
| Onionhead A~ |        204 | #.. |      8,214 |      8,100 |          - | ... |      8,150 | C.RI |
| Tobacco      |      9,004 | ##. |      5,412 |      5,300 |          - | ... |      5,380 | C... |
+--------------+------------+-----+------------+------------+------------+-----+------------+------+
   columns hidden to fit 100 cols: ID, Fence
