crates/edm-core/tests/snapshots/render__commodity_wide_w200.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== COMMODITIES  4 entries in 2 categories ==============================================================================================================================================================
+-----------+--------------------------------+------------+-----+------------+------------+-----------+------------+-----+------------+------+
|        ID | Commodity                      |      Stock | Stk |        Buy |       Sell |     Fence |     Demand | Dmd |       Mean | CPRI |
+===========+================================+============+=====+============+============+===========+============+=====+============+======+
| CONSUMER ITEMS  2 items | 1 supplied | 2 in demand                                                                                         |
+-----------+--------------------------------+------------+-----+------------+------------+-----------+------------+-----+------------+------+
| 128049204 | Advanced Catalysers Mk II Pri~ | 12,345,678 | ### | 12,345,678 | 12,345,600 | 9,999,999 | 98,765,432 | ..# | 11,900,000 | CP.I |
| 128673850 | Hydrogen Fuel                  |          - | ... |        110 |        104 |         - |      3,412 | #.. |        107 | .P.. |
+-----------+--------------------------------+------------+-----+------------+------------+-----------+------------+-----+------------+------+
| LEGAL DRUGS  2 items | 2 supplied | 0 in demand                                                                                            |
+-----------+--------------------------------+------------+-----+------------+------------+-----------+------------+-----+------------+------+
| 128049210 | Onionhead Alpha Strain         |        204 | #.. |      8,214 |      8,100 |     4,003 |          - | ... |      8,150 | C.RI |
| 128049211 | Tobacco                        |      9,004 | ##. |      5,412 |      5,300 |         - |          - | ... |      5,380 | C... |
+-----------+--------------------------------+------------+-----+------------+------------+-----------+------------+-----+------------+------+
