crates/edm-core/tests/snapshots/render__field_narrow_w200.snap
---
source: crates/edm-core/tests/render.rs
expression: "emit(&scenario, width)"
---
== REQUEST  GET /market ================================================================================================================================================================================
+----------+--------------+
| Field    | Value        |
+==========+==============+
| method   | GET          |
| marketId | 3229028096   |
| dryRun   | no           |
+----------+--------------+
